Refactored by divided to modules  - added Rover module